--- a/slides/index.html
+++ b/slides/index.html
@@ -722,10 +722,10 @@ clean:
 <p>Then: introduce {targets} Define steps and dependencies Auto-skips steps with cached results Visualise pipeline with tar_visnetwork()</p>
 </section></section>
 <section>
-<section id="wrap-up" class="title-slide slide level1 center">
-<h1>Wrap-up</h1>
+<section id="wrapping-up" class="title-slide slide level1 center" data-background-color="#003049">
+<h1>Wrapping up</h1>
 
-</section>
+<img data-src="images/stewie.gif" class="r-stretch"></section>
 <section id="tools-wont-solve" class="slide level2">
 <h2>Tools won’t solve</h2>
 <ul>
