--- a/practical/practical.html
+++ b/practical/practical.html
@@ -2422,7 +2422,7 @@ vertical-align: -.125em;
 <li>Committing your project to GitHub</li>
 <li>Restoring it from GitHub</li>
 </ol>
-<p>With the Women’s EURO 2025 final coming up this weekend, we’ll be using data on England’s performances over the past year.</p>
+<p>With the Women’s EURO 2025 final approaching this weekend, we’ll build a reproducible pipeline to predict England’s chance of winning the final against Spain, using information of their performance over the past year.</p>
 <p>You will:</p>
 <ul>
 <li>Build models to predict England’s chance of winning their next match.</li>
