--- a/practical/practical.html
+++ b/practical/practical.html
@@ -2538,10 +2538,10 @@ To push and pull from GitHub, you need to authenticate. There are two options:
 <h1 data-number="2"><span class="header-section-number">2</span> Download the scripts and datasets</h1>
 <p>Click the links below to download the required scripts and dataset:</p>
 <ul>
-<li><a href="practical/2-scripts/01-clean.R"><code>01-clean.R</code></a></li>
-<li><a href="practical/2-scripts/02-analysis.R"><code>02-analysis.R</code></a></li>
-<li><a href="practical/2-scripts/03-plot.R"><code>03-plot.R</code></a></li>
-<li><a href="practical/1-data/raw/fixtures.csv"><code>fixtures.csv</code></a></li>
+<li><a href="https://github.com/ewancarr/reproducible-r/raw/32c5193f823d03da27e59345169da15c68e12036/practical/2-scripts/01-clean.R"><code>01-clean.R</code></a></li>
+<li><a href="https://github.com/ewancarr/reproducible-r/raw/refs/heads/main/practical/2-scripts/02-analysis.R"><code>02-analysis.R</code></a></li>
+<li><a href="https://github.com/ewancarr/reproducible-r/raw/refs/heads/main/practical/2-scripts/03-plot.R"><code>03-plot.R</code></a></li>
+<li><a href="https://raw.githubusercontent.com/ewancarr/reproducible-r/refs/heads/main/practical/1-data/raw/fixtures.csv"><code>fixtures.csv</code></a></li>
 </ul>
 <p>Put these inside your project folder and recreate the structure shown below:</p>
 <pre class="text"><code>scripts/
