--- a/practical/practical.html
+++ b/practical/practical.html
@@ -2544,14 +2544,14 @@ To push and pull from GitHub, you need to authenticate. There are two options:
 <li><a href="https://raw.githubusercontent.com/ewancarr/reproducible-r/refs/heads/main/practical/1-data/raw/fixtures.csv"><code>fixtures.csv</code></a></li>
 </ul>
 <p>Put these inside your project folder and recreate the structure shown below:</p>
-<pre class="text"><code>scripts/
-├── 01-clean.R
-├── 02-analysis.R
-└── 03-plot.R
-data/
+<pre class="text"><code>1-data/
 ├── raw/
 │   └── fixtures.csv
 └── clean/
+2-scripts/
+├── 01-clean.R
+├── 02-analysis.R
+└── 03-plot.R
 outputs/</code></pre>
 </section>
 <section id="initialise-renv-and-install-the-required-packages" class="level1" data-number="3">
