Add guinea pigs

--- a/index.html
+++ b/index.html
@@ -858,8 +858,12 @@ To learn more:
 <img data-src="images/qr.png" class="quarto-figure quarto-figure-center r-stretch"><div class="center-h">
 <p><em>Slides and practical materials</em></p>
 </div>
+</section>
+<section id="section-24" class="slide level2 center">
+<h2></h2>
 
-</section></section>
+
+<img data-src="images/pigs.png" class="r-stretch"></section></section>
 
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
